# nvim

./: .gitignore  CLAUDE.md  init.lua  lazy-lock.json  pyproject.toml
lua/config/: autocmds.lua  keymaps.lua  options.lua
lua/custom/plugins/: completion.lua  copilot-chat.lua  copilot.lua  curl.lua  diffview.lua  image.lua  lsp.lua  molten.lua  prettier.lua  treesitter.lua
lua/kickstart/plugins/: debug.lua  neo-tree.lua
