[project]
name = "nvim"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "ipykernel>=7.1.0",
    "jupyter-client>=8.6.3",
    "jupytext>=1.18.1",
    "kaleido>=1.2.0",
    "plotly>=6.4.0",
    "pnglatex>=1.1",
    "pynvim>=0.6.0",
    "pyperclip>=1.11.0",
]
